@@ -1297,6 +1297,7 @@ o Other Applications & Tests (apps/examples/)
                it stops rendering.  This is not a problem for the examples/nx
                code because it uses so few fonts, but if the logic were
                leveraged for more general purposes, it would be a problem.
+               Update: see examples/nxtext for some improved font cache handling.
   Status:      Open
   Priority:    Low.  This is not really a problem becauses examples/nx works
                fine with its bogus font caching.
